fix PDF link on mobile

--- a/sass/pages/_resume.sass
+++ b/sass/pages/_resume.sass
@@ -3,3 +3,5 @@ body#resume
     position: absolute
     top: 0
     right: 0
+    +mobile
+      position: relative
